# SSDD_Extra

./: .gitignore  README.md  pyproject.toml
calculator/: __init__.py  calculator.py  command_handlers.py  kafka_producer.py  remotecalculator.ice  server.py
config/: calculator.config
docs/: enunciado.md
